[tool.poetry]
name = "fastapi-uplodfile-savejson"
version = "0.1.0"
description = ""
authors = ["SergioEanX <sergio.ferlito@enea.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
motor = "^3.4.0"
pathlib = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
